welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:26: error: reassignment to val
		if (getDirection=Direction.EAST) {
                                ^